# duets

./: .babelrc.js  .editorconfig  .eslintrc.json  .gitignore  .gitmodules  .prettierrc  .rescriptsrc.js  .webpack.config.js  AGENTS.md  CLAUDE.md  Cargo.toml  Directory.Build.props  Dockerfile  Duets.sln  LICENSE  README.md  package-lock.json  package.json  project.godot  tsconfig.json  tsconfig.paths.json
crates/app/: Cargo.toml
crates/app/src/: context.rs  lib.rs
crates/app/src/builders/: game.rs  game_start.rs  mod.rs
crates/app/src/builders/start/: band_start.rs  game_start.rs
crates/app/src/constants/: errors.rs
crates/app/src/data/: find.rs  integrity.rs  mod.rs
crates/app/src/data/database/: mod.rs
crates/app/src/database/: mod.rs
crates/app/src/database/entities/: city.rs  country.rs  mod.rs
crates/app/src/entities/: character.rs  city.rs  mod.rs  savegame.rs  skill.rs
crates/app/src/entities/deserializers/: mod.rs
crates/app/src/extensions/: game_state.rs  mod.rs
crates/app/src/operations/: start.rs
crates/app/src/operations/savegame/: save.rs
crates/app/src/serializables/: character.rs  city.rs  country.rs  game_state.rs  genre.rs  instrument.rs  mod.rs  skill.rs
crates/app/src/world/: mod.rs  movement.rs
crates/app/src/world/cities/: mod.rs
crates/app/src/world/countries/: mod.rs
crates/app/src/world/interactions/: instrument_interaction.rs  interact.rs  mod.rs  requirement.rs
crates/app/src/world/places/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/common/: action.rs  command.rs  context.rs  display.rs  input.rs  mod.rs  orchestrator.rs  screen.rs
crates/cli/src/common/commands/: exit.rs  help.rs  mod.rs
crates/cli/src/common/display/: choice_input_display.rs  command_input_display.rs  common.rs  mod.rs  styles.rs  text_input_display.rs
crates/cli/src/common/emoji/: mod.rs
crates/cli/src/common/input/: common.rs  mod.rs  read_choice.rs  read_command.rs  read_date.rs  read_line.rs  read_number.rs  read_text_choice.rs
crates/cli/src/common/orchestrator/: mod.rs
crates/cli/src/effects/: exit.rs  mod.rs  modify_state.rs  save.rs  set_state.rs
crates/cli/src/screens/: interaction.rs  mod.rs
crates/cli/src/shared/: action.rs  context.rs  mod.rs  orchestrator.rs  screen.rs
crates/cli/src/tests/: lang.rs  mod.rs  screens.rs
crates/common/: Cargo.toml
crates/common/src/: game_info.rs  lib.rs  shared.rs
crates/common/src/builders/: mod.rs
crates/common/src/entities/: action_registry.rs  band.rs  calendar.rs  character.rs  city.rs  country.rs  game_state.rs  genre.rs  identity.rs  instrument.rs  mod.rs  object.rs  place.rs  position.rs  room.rs  skill.rs  song.rs
crates/common/src/extensions/: option.rs
crates/common/src/results/: interact_result.rs  mod.rs
crates/common/src/serializables/: band.rs  calendar.rs  character.rs  city.rs  country.rs  game_state.rs  genre.rs  instrument.rs  mod.rs  naivedate.rs  object.rs  place.rs  position.rs  room.rs  skill.rs
(+2023 files in other folders)
