[package]
name = "app"
version = "0.1.0"
authors = ["Fran <fgzv@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
engine = { path = "../engine" }

chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
