[package]
name = "app"
version = "0.1.0"
authors = ["Fran <fgzv@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
engine = { path = "../engine" }
storage = { path = "../storage" }

chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_builder = "0.9.0"
strum = "0.19.2"
strum_macros = "0.19.2"
boolinator = "2.4.0"
