[package]
name = "cli"
version = "0.1.0"
authors = ["Fran <fgzv@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app" }
engine = { path = "../engine" }

chrono = "0.4"
console = "0.11.3"
dialoguer = "0.6.2"
