[package]
name = "common"
version = "0.1.0"
authors = ["Fran <fgzv@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
derive_builder = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.19.2"
strum_macros = "0.19.2"
uuid = { version = "0.8", features = ["serde", "v4"] }